bugfix: popover arrow distance on firefox

--- a/source/popover/popover.style.scss
+++ b/source/popover/popover.style.scss
@@ -54,7 +54,6 @@ $popover-title: rgb(249, 249, 249);
 
 .arrow {
 
-	position: relative;
 	background: $popover-background;
 	box-shadow: $popover-shadow;
 
